--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> 
-            Augus Design <3 
+            Augus Design
         </title>
         <link rel="stylesheet" href="style.css">
     </head>
